--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
         body {
             font-family: 'Alata', sans-serif;
         };
+
+        h1{
+            color: #44d62c;
+        }
     </style>
 </head>
 <body>
