--- a/index.html
+++ b/index.html
@@ -50,13 +50,15 @@
         )
         .then(response => response.json())
         .then(json => {
-            json.feed.entry.map(item => {
+            console.log(json);
+            /*json.feed.entry.map(item => {
             appDiv.innerHTML += `<div class="item">
             <div class="photo"></div>
             <h4>${item.gsx$nombre.$t} ${item.gsx$apellido.$t}</h4>
             <p>${item.gsx$universo.$t} </p>
             </div>`;
-            });
+            */
+            
         });
 
 
@@ -69,6 +71,7 @@
     <h1>Visualizador de Datos para Taller Mecánico</h1>
 
     <div class="container-visualizer"></div>
+    <div id="app"></div>
 
 </body>
 </html>
