--- a/index.html
+++ b/index.html
@@ -46,28 +46,15 @@
 
     <script>
 
-        
-
-        // Write Javascript code!
-        const appDiv = document.getElementById("app");
-        appDiv.innerHTML = `<h1>Heroes</h1>`;
-
-
-        fetch(
-        "https://spreadsheets.google.com/feeds/list/1mVAvv0lEFpYTzURD5ep_kPh4ww6-_BX7p_4sXq_ylik/1/public/full?alt=json"
-        )
-        .then(response => response.json())
-        .then(json => {
-            console.log(json);
-            /*json.feed.entry.map(item => {
-            appDiv.innerHTML += `<div class="item">
-            <div class="photo"></div>
-            <h4>${item.gsx$nombre.$t} ${item.gsx$apellido.$t}</h4>
-            <p>${item.gsx$universo.$t} </p>
-            </div>`;
-            */
-            
+    fetch(
+    "https://opensheet.elk.sh/1mVAvv0lEFpYTzURD5ep_kPh4ww6-_BX7p_4sXq_ylik/1"
+    )
+    .then((res) => res.json())
+    .then((data) => {
+        data.forEach((row) => {
+        // Do something with each row here.
         });
+    });
 
 
     </script>
