datos de api console.log

--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
     .then((data) => {
         data.forEach((row) => {
         // Do something with each row here.
+            console.log(row);
         });
     });
 
