--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
         }
 
-        .container-visualizer .item:nth-child(){
+        .container-visualizer .item .p:nth-child(){
             max-width: 18vw;
         }
 
@@ -70,7 +70,7 @@
             appDiv.innerHTML += `
                 <div class="item">
                     <div class="photo"></div>
-                    <h4>${row.MARCA}</h4>
+                    <p>${row.MARCA}</p>
                     <p>${row.MODELO} </p>
                     <p>${row.PATENTE} </p>
                     <p>${row.PROCESO} </p>
