--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
         }
 
-        .container-visualizer .item p:nth-child(){
+        .container-visualizer .item:nth-child(n){
             max-width: 18vw;
         }
 
