--- a/index.html
+++ b/index.html
@@ -37,7 +37,8 @@
         }
 
         .container-visualizer .item p:nth-child(n){
-            max-width: 18vw;
+            width: 18vw;
+            padding: 0px 10px;
         }
 
 
