--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     <script>
 
     const appDiv = document.getElementById("container-visualizer");
-    appDiv.innerHTML = `Listado`;
+    appDiv.innerHTML = ``;
 
     fetch(
     "https://opensheet.elk.sh/1mVAvv0lEFpYTzURD5ep_kPh4ww6-_BX7p_4sXq_ylik/1"
@@ -75,6 +75,9 @@
                     <p>${row.MODELO} </p>
                     <p>${row.PATENTE} </p>
                     <p>${row.PROCESO} </p>
+                    <p>${row.COMPAÑÍA} </p>
+                    <p>${row['FECHA DE ENTREGA']} </p>
+                    <p>${row['MAESTRO A CARGO']} </p>
                 </div>`;
             });
     });
