--- a/index.html
+++ b/index.html
@@ -22,18 +22,20 @@
 
         .container-visualizer{
             margin: 20px auto;
-            width: calc( 80vw - 40px);
+            /* width: calc( 80vw - 40px); */
             background: black;
             box-shadow: 0px 70px 160px -42px rgba(0,0,0,0.3);
             border-radius: 10px;
             color: white;
             display: grid;
-            grid-template-columns: 50vw 50vw;
+            grid-template-columns: 1fr 1fr;
         }
 
         .container-visualizer .item{
             margin: 10px auto;
             border-bottom: 2px solid white;
+            border-right: 2px solid white;
+            width: 100%;
 
         }
 
