--- a/index.html
+++ b/index.html
@@ -43,6 +43,10 @@
             padding: 0px 10px;
         }
 
+        .container-visualizer .item p{
+            color: #44d62c;
+        }
+
 
     </style>
 </head>
