--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             padding: 0px 10px;
         }
 
-        .container-visualizer .item p{
+        .container-visualizer .item p b{
             color: #44d62c;
         }
 
