--- a/index.html
+++ b/index.html
@@ -41,10 +41,12 @@
 
         .container-visualizer .item p:nth-child(n){
             padding: 0px 10px;
+            font-size: 18px;
         }
 
         .container-visualizer .item p b{
             color: #44d62c;
+            font-size: 25px;
         }
 
 
