--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                 appDiv.innerHTML += `
                     <div class="item">
                         <div class="photo"></div>
-                        <p>Vehiculo : <b>${row.MARCA} - ${row.MODELO}</b> <b>Patente : <span>${row.PATENTE}</span></b></p>
+                        <p>Vehiculo : <b>${row.MARCA} - ${row.MODELO}</b>      Patente : <span>${row.PATENTE}</span></b></p>
                         <p>Compañia : <b>${row.COMPAÑÍA} </b></p>
                         <p>Proceso : <b>${row.PROCESO} </b></p>
                         <p>Fecha de entrega : <b>${ ((row['FECHA DE ENTREGA']) ? row['FECHA DE ENTREGA'] : '-')} </b></p>
