--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             font-size: 18px;
         }
 
-        .container-visualizer .item p b span{
+        .container-visualizer .item p span{
             background: white;
             color: black;
             padding: 4px 10px;
