--- a/index.html
+++ b/index.html
@@ -61,8 +61,8 @@
 
     </style>
 
-    <link rel="stylesheet" type="text/css" href="https://kenwheeler.github.io/slick/slick.css"/>
-    <link rel="stylesheet" type="text/css" href="https://kenwheeler.github.io/slick/slick-theme.css"/>
+    <link rel="stylesheet" type="text/css" href="https://kenwheeler.github.io/slick/slick/slick.css"/>
+    <link rel="stylesheet" type="text/css" href="https://kenwheeler.github.io/slick/slick/slick-theme.css"/>
 
 </head>
 <body>
@@ -124,7 +124,7 @@
 
     <script type="text/javascript" src="https://code.jquery.com/jquery-1.11.0.min.js"></script>
     <script type="text/javascript" src="https://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
-    <script type="text/javascript" src="https://kenwheeler.github.io/slick/slick.min.js"></script>    
+    <script type="text/javascript" src="https://kenwheeler.github.io/slick/slick/slick.min.js"></script>    
 
     <script type="text/javascript">
         $(document).ready(function(){
