--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                     <div class="item">
                         <div class="photo"></div>
                         <div style="display: flex; justify-content: space-between">
-                            <p>Vehiculo : <b>${row.MARCA} - ${row.MODELO}</b></p>
+                            <p>Vehículo : <b>${row.MARCA} - ${row.MODELO}</b></p>
                             <p>Patente : <span>${row.PATENTE}</span></p>
                         </div>
                         <p>Compañia : <b>${row.COMPAÑÍA} </b></p>
