--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
         data.forEach((row) => {
 
             console.log('row :: ', row);
-            console.log('count :: ', count);
+            console.log('count :: ', cont);
 
             if(cont == 0 ) {
                 appDiv.innerHTML += `<div class="item">`;
@@ -113,7 +113,7 @@
 
             cont++;
 
-            console.log('count :: ', count);
+            console.log('count :: ', cont);
 
             if(cont == 6 ) {
                 appDiv.innerHTML += `</div>`;
