--- a/index.html
+++ b/index.html
@@ -90,6 +90,7 @@
             console.log('count :: ', cont);
 
             if(cont == 0 ) {
+                console.log('cont == 0');
                 appDiv.innerHTML += `<div class="item">`;
             }
 
@@ -124,6 +125,7 @@
         });
 
         if(cont != 6) {
+            console.log('cont != 6');
             appDiv.innerHTML += `</div>`;
         }
             
