--- a/index.html
+++ b/index.html
@@ -27,6 +27,10 @@
             box-shadow: 0px 70px 160px -42px rgba(0,0,0,0.3);
             border-radius: 10px;
             color: white;
+            
+        }
+
+        .container-visualizer .item{
             display: grid;
             grid-template-columns: 1fr 1fr 1fr;
         }
