--- a/index.html
+++ b/index.html
@@ -147,7 +147,9 @@
 
     <script type="text/javascript">
         $(document).ready(function(){
-          $('.container-visualizer').slick();
+          $('.container-visualizer').slick({
+            dots: true
+          });
         });
     </script>
 
