--- a/index.html
+++ b/index.html
@@ -148,7 +148,9 @@
     <script type="text/javascript">
         $(document).ready(function(){
           $('.container-visualizer').slick({
-            dots: true
+            dots: true,
+            autoplay: true,
+            autoplaySpeed: 2000,
           });
         });
     </script>
