test document ready

--- a/index.html
+++ b/index.html
@@ -147,6 +147,9 @@
 
     <script type="text/javascript">
         $(document).ready(function(){
+          
+          console.log('document ready');
+
           $('.container-visualizer').slick({
             dots: true,
             autoplay: true,
