test document ready

--- a/index.html
+++ b/index.html
@@ -141,10 +141,10 @@
         
         console.log('document ready');
 
-        $('.container-visualizer').slick({
+        $('#container-visualizer').slick({
             dots: true,
             autoplay: true,
-            autoplaySpeed: 2000,
+            autoplaySpeed: 2000
         });
     });
     </script>
