test document ready

--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
         
         console.log('document ready');
 
-        $('#container-visualizer').slick({
+        document.getElementById("container-visualizer").slick({
             dots: true,
             autoplay: true,
             autoplaySpeed: 2000
