--- a/index.html
+++ b/index.html
@@ -68,9 +68,9 @@
     <link rel="stylesheet" type="text/css" href="https://kenwheeler.github.io/slick/slick/slick.css"/>
     <link rel="stylesheet" type="text/css" href="https://kenwheeler.github.io/slick/slick/slick-theme.css"/>
 
-    <script type="text/javascript" src="https://code.jquery.com/jquery-1.11.0.min.js"></script>
-    <script type="text/javascript" src="https://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
-    <script type="text/javascript" src="https://kenwheeler.github.io/slick/slick/slick.min.js"></script>    
+    <script async type="text/javascript" src="https://code.jquery.com/jquery-1.11.0.min.js"></script>
+    <script async type="text/javascript" src="https://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+    <script async type="text/javascript" src="https://kenwheeler.github.io/slick/slick/slick.min.js"></script>    
 
 </head>
 <body>
