--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
         
         console.log('document ready');
 
-        appDiv.slick({
+        $('.container-visualizer').slick({
             dots: true,
             autoplay: true,
             autoplaySpeed: 2000
