--- a/index.html
+++ b/index.html
@@ -71,6 +71,10 @@
     <script async type="text/javascript" src="https://code.jquery.com/jquery-1.11.0.min.js"></script>
     <script async type="text/javascript" src="https://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
     <script async type="text/javascript" src="https://kenwheeler.github.io/slick/slick/slick.min.js"></script>    
+    <script
+  src="https://code.jquery.com/jquery-3.7.1.min.js"
+  integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo="
+  crossorigin="anonymous"></script>
 
 </head>
 <body>
