test document ready

--- a/index.html
+++ b/index.html
@@ -141,11 +141,11 @@
     });
 
 
-    $(document).ready(function(){
+    jQuery(document).ready(function(){
         
         console.log('document ready');
 
-        $('.container-visualizer').slick({
+        jQuery('.container-visualizer').slick({
             dots: true,
             autoplay: true,
             autoplaySpeed: 2000
