Cambio de titulo

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Fenix Automotriz -  Visualizador de Datos para Taller Mecánico</title>
+    <title>Fenix Automotriz -  Visualizador de Datos para Taller DYP</title>
 
     <script async type="text/javascript" src="https://code.jquery.com/jquery-1.11.0.min.js"></script>
     <!--
